scripts/emco-virtual-services.yml
# SPDX-License-Identifier: Apache-2.0
# Copyright (c) 2020 Intel Corporation
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: emco-gateway
  namespace: emco
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: emco-credential
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-emco-orchestrator
  namespace: emco
spec:
  hosts:
  - "*"
  gateways:
  - emco-gateway
  http:
  - match:
    - uri:
        prefix: /v2/controllers
    - uri:
        exact: /v2/projects
    - uri:
        regex: /v2/projects/[^\/]*
    - uri:
        regex: /v2/projects/.+/composite-apps
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*/apps
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*/apps/[^\/]*
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*/composite-profiles
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*/composite-profiles/[^\/]*
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*/composite-profiles/[^\/]*/profiles
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*/composite-profiles/[^\/]*/profiles/[^\/]*
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*/deployment-intent-groups
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*/deployment-intent-groups/[^\/]*
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*/deployment-intent-groups/[^\/]*/approve
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*/deployment-intent-groups/[^\/]*/instantiate
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*/deployment-intent-groups/[^\/]*/status
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*/deployment-intent-groups/[^\/]*/terminate
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*/deployment-intent-groups/[^\/]*/intents
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*/deployment-intent-groups/[^\/]*/intents/[^\/]*
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*/deployment-intent-groups/[^\/]*/generic-placement-intents
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*/deployment-intent-groups/[^\/]*/generic-placement-intents/[^\/]*
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*/deployment-intent-groups/[^\/]*/generic-placement-intents/[^\/]*/app-intents
    - uri:
        regex: /v2/projects/.+/composite-apps/[^\/]*\/[^\/]*/deployment-intent-groups/[^\/]*/generic-placement-intents/[^\/]*/app-intents/[^\/]*

    route:
    - destination:
        port:
          number: 9015
        host: orchestrator
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-emco-clm
  namespace: emco
spec:
  hosts:
  - "*"
  gateways:
  - emco-gateway
  http:
  - match:
    - uri:
        exact: /v2/cluster-providers
    - uri:
        regex: /v2/cluster-providers/[^\/]*
    - uri:
        regex: /v2/cluster-providers/.+/clusters
    - uri:
        regex: /v2/cluster-providers/.+/clusters/[^\/]*
    - uri:
        regex: /v2/cluster-providers/.+/clusters/[^\/]*/labels
    - uri:
        regex: /v2/cluster-providers/.+/clusters/[^\/]*/labels/[^\/]*
    - uri:
        regex: /v2/cluster-providers/.+/clusters/[^\/]*/kv-pairs
    - uri:
        regex: /v2/cluster-providers/.+/clusters/[^\/]*/kv-pairs/[^\/]*
    - uri:
        exact: /v2/clm-controllers
    - uri:
        regex: /v2/clm-controllers/.+
    route:
    - destination:
        port:
          number: 9061
        host: clm
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-emco-ncm
  namespace: emco
spec:
  hosts:
  - "*"
  gateways:
  - emco-gateway
  http:
  - match:
    - uri:
        regex: /v2/cluster-providers/.+/.+/.+/networks/*
    - uri:
        regex: /v2/cluster-providers/.+/.+/.+/provider-networks/*
    - uri:
        regex: /v2/cluster-providers/.+/.+/.+/networks/[^\/]*
    - uri:
        regex: /v2/cluster-providers/.+/.+/.+/provider-networks/[^\/]*
    - uri:
        regex: /v2/cluster-providers/.+/.+/.+/apply
    - uri:
        regex: /v2/cluster-providers/.+/.+/.+/terminate
    route:
    - destination:
        port:
          number: 9081
        host: ncm
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-emco-dtc
  namespace: emco
spec:
  hosts:
  - "*"
  gateways:
  - emco-gateway
  http:
  - match:
    - uri:
        regex: /v2/projects/.+/composite-apps/.+/.+/deployment-intent-groups/.+/traffic-group-intents
    - uri:
        regex: /v2/projects/.+/composite-apps/.+/.+/deployment-intent-groups/.+/traffic-group-intents/.*
    - uri:
        regex: /v2/projects/.+/composite-apps/.+/.+/deployment-intent-groups/.+/traffic-group-intents/.+/inbound-intents
    - uri:
        regex: /v2/projects/.+/composite-apps/.+/.+/deployment-intent-groups/.+/traffic-group-intents/.+/inbound-intents/.*
    - uri:
        regex: /v2/projects/.+/composite-apps/.+/.+/deployment-intent-groups/.+/traffic-group-intents/.+/inbound-intents/.+/clients
    - uri:
        regex: /v2/projects/.+/composite-apps/.+/.+/deployment-intent-groups/.+/traffic-group-intents/.+/inbound-intents/.+/clients/.*
    route:
    - destination:
        port:
          number: 9018
        host: dtc
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-emco-hpa
  namespace: emco
spec:
  hosts:
  - "*"
  gateways:
  - emco-gateway
  http:
  - match:
    - uri:
        regex: /v2/projects/.+/composite-apps/.+/.+/deployment-intent-groups/.+/hpa-intents
    - uri:
        regex: /v2/projects/.+/composite-apps/.+/.+/deployment-intent-groups/.+/hpa-intents/.*
    - uri:
        regex: /v2/projects/.+/composite-apps/.+/.+/deployment-intent-groups/.+/hpa-intents/.+/hpa-resource-consumers
    - uri:
        regex: /v2/projects/.+/composite-apps/.+/.+/deployment-intent-groups/.+/hpa-intents/.+/hpa-resource-consumers/.*
    - uri:
        regex: /v2/projects/.+/composite-apps/.+/.+/deployment-intent-groups/.+/hpa-intents/.+/hpa-resource-consumers/.+/resource-requirements
    - uri:
        regex: /v2/projects/.+/composite-apps/.+/.+/deployment-intent-groups/.+/hpa-intents/.+/hpa-resource-consumers/.+/resource-requirements/.*
    route:
    - destination:
        port:
          number: 9091
        host: hpaplacement
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-emco-callback
  namespace: emco
spec:
  hosts:
  - "*"
  gateways:
  - emco-gateway
  http:
  - match:
    - uri:
        prefix: /mesh/auth_callback
    route:
    - destination:
        host: orchestrator
